[gd_scene load_steps=7 format=2]

[ext_resource path="res://TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Souvenir-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Base.tres" type="Theme" id=3]
[ext_resource path="res://Crafting.gd" type="Script" id=4]
[ext_resource path="res://SubtitleFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Scene" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
theme = ExtResource( 3 )
color = Color( 1, 0.870588, 0.52549, 1 )

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Crafting"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="."]
margin_top = 88.0
margin_right = 1024.0
margin_bottom = 158.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.219608, 0.529412, 0.0470588, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Choose your Musubi style for today"
align = 1
valign = 1

[node name="Item1" type="Label" parent="."]
margin_top = 189.0
margin_right = 384.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "10 Spam:"
align = 2

[node name="Price1" type="Label" parent="."]
visible = false
margin_left = 448.0
margin_top = 192.0
margin_right = 536.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 64, 40 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Buy1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 656.0
margin_top = 192.0
margin_right = 822.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Choose"

[node name="Item2" type="Label" parent="."]
margin_left = 8.0
margin_top = 288.0
margin_right = 384.0
margin_bottom = 327.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "10 Spam:"
align = 2

[node name="Price2" type="Label" parent="."]
visible = false
margin_left = 448.0
margin_top = 291.0
margin_right = 536.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( 64, 40 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Buy2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 656.0
margin_top = 291.0
margin_right = 822.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Choose"

[node name="Item3" type="Label" parent="."]
margin_left = 8.0
margin_top = 392.0
margin_right = 384.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 136, 184 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "10 Spam:"
align = 2

[node name="Price3" type="Label" parent="."]
visible = false
margin_left = 448.0
margin_top = 395.0
margin_right = 536.0
margin_bottom = 435.0
rect_pivot_offset = Vector2( 64, 40 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Buy3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 656.0
margin_top = 395.0
margin_right = 822.0
margin_bottom = 435.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Choose"

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 432.0
margin_top = 544.0
margin_right = 598.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Back"

[connection signal="pressed" from="Buy1" to="." method="_on_Buy1_pressed"]
[connection signal="pressed" from="Buy2" to="." method="_on_Buy2_pressed"]
[connection signal="pressed" from="Buy3" to="." method="_on_Buy3_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
